Prepare Noggin & FASJSON for prod
Signed-off-by: Aurélien Bompard <aurelien@bompard.org>

--- a/roles/easyfix/gather/files/template.html
+++ b/roles/easyfix/gather/files/template.html
@@ -220,7 +220,7 @@
                             <dd><a href="https://fedoraproject.org/en/join-fedora">Join Fedora</a></dd>
 
                             <dd><a href="https://fedoraproject.org/wiki/SIGs">Fedora SIGs</a></dd>
-                            <dd><a href="https://admin.fedoraproject.org/accounts/">Fedora Account System</a></dd>
+                            <dd><a href="https://accounts.fedoraproject.org/">Fedora Account System</a></dd>
                             <dd><a href="https://admin.fedoraproject.org/community/">Fedora Community</a></dd>
                         </dl>
                 </div>
